# django-dash

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  docker-compose.yml  justfile  pylock.toml  pyproject.toml
designs/: dash_banner.acorn  dash_logo.acorn  orig_dash_logo_noodling.acorn  stopwatch_icon.acorn  teaser_banner.acorn
docker/: gunicorn.conf.py  web.dockerfile
docs/: api.md  data_modeling.md  discord_rules.md
frontend/: index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.jsx  style.css
frontend/src/components/: Avatar.jsx  Button.jsx  ErrorBoundary.jsx  Errors.jsx  Footer.jsx  Form.jsx  FormRows.jsx  Header.jsx  Input.jsx  Loading.jsx  MainContent.jsx  Select.jsx
frontend/src/pages/: Home.jsx
src/accounts/: urls.py  views.py
src/competitions/: admin.py  apps.py  models.py  urls.py  views.py
src/competitions/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/entries/: admin.py  apps.py  models.py
src/entries/migrations/: 0001_initial.py
src/invites/: admin.py  apps.py  models.py
src/invites/migrations/: 0001_initial.py
src/judging/: admin.py  apps.py  models.py
src/judging/migrations/: 0001_initial.py
src/repositories/: admin.py  apps.py  models.py
src/repositories/migrations/: 0001_initial.py
src/sponsors/: admin.py  apps.py  models.py
src/teams/: admin.py  apps.py  models.py  urls.py  views.py
src/templates/: index.html
src/utils/: api_tools.py  codes.py  gravatars.py  querysets.py
(+12 files in other folders)
